# collaborative-code-editor

./: README.md
backend/: CMakeLists.txt
backend/src/: doc_manager.cpp  doc_manager.hpp  main.cpp  operational_transformation.cpp  operational_transformation.hpp  server.cpp  server.hpp  websocket_session.cpp  websocket_session.hpp
frontend/: index.html  script.js  styles.css
